--- a/example.html
+++ b/example.html
@@ -5,22 +5,27 @@
 </head>
 <body>
   <div id="foobar" style="background-color: #ccc; width: 100%; height: 50vh;-webkit-touch-callout: none;-webkit-user-select: none;-khtml-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;">0</div>
+  <pre id="console"></pre>
   <script type="text/javascript">
-    const f = document.getElementById("foobar");
+    var f = document.getElementById("foobar");
     var v = 1;
     var jsConsole;
     f.addEventListener("tap", function (e) {
-        v += 1;
-       f.textContent = v;
+       v += 1;
+       f.textContent = v ;
     });
 
-    f.addEventListener("longtap", function (e) {
+    f.addEventListener("press", function (e) {
       if (!f.style.backgroundColor) {
         f.style.backgroundColor = "rgb(204,204,204)";
       }
       else {
         f.style.backgroundColor = null;
       }
+    });
+
+    f.addEventListener("rotate", function (e) {
+        document.getElementById('console').textContent += e.detail.rotation + "\n";
     });
 
     f.textContent = v;
